<?xml version="1.0"?>
<package format="2">
  <name>dcdc_nuc</name>
  <version>0.1.0</version>
  <description>
    Communicates with Mini-Box DCDC NUC computer power supply.
  </description>

  <maintainer email="bei.liu@mail.mcgill.ca">Bei Chen Liu</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>libusb</depend>
  <depend>libusb-dev</depend>

  <export> </export>
</package>
